# DAVSIDEAI

./: .env.example  .gitignore  README.md  android-build.yml
.github/: android-build.yml
.github/workflows/: android-build.yml  build-and-deploy.yml
client/public/__manus__/: version.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: tauri-mock.ts
frontend/src/lib/components/: AgentButtons.svelte  BoligSearchUI.svelte  ContractChecker.svelte  NegotiationAgent.svelte  SetupWizard.svelte  StagingPanel.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
